1) UI alignment issues fixed after adding top header

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ h1 {
   color: #ffffff;
 }
 
+.instructions-top {
+  margin-top: 12px;
+}
+
 .parent {
   width: 500px;
   height: 1087px;
@@ -28,6 +32,7 @@ h1 {
   border: none;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  padding: 1px;
 }
 
 .bottom-view {
@@ -179,11 +184,11 @@ i {
   width: 400px;
   height: 15px;
   fill: hsl(116, 0%, 73%);
-  transform: translateX(99px) translateY(233px);
-  -webkit-transform: translateX(99px) translateY(233px);
-  -moz-transform: translateX(99px) translateY(233px);
-  -ms-transform: translateX(99px) translateY(233px);
-  -o-transform: translateX(99px) translateY(233px);
+  transform: translateX(99px) translateY(175px);
+  -webkit-transform: translateX(99px) translateY(175px);
+  -moz-transform: translateX(99px) translateY(175px);
+  -ms-transform: translateX(99px) translateY(175px);
+  -o-transform: translateX(99px) translateY(175px);
 }
 
 .plate-foFive {
@@ -192,22 +197,22 @@ i {
   fill: black;
   stroke-width: 1px;
   stroke: #9e9ea2;
-  transform: translateX(186px) translateY(146px);
-  -webkit-transform: translateX(186px) translateY(146px);
-  -moz-transform: translateX(186px) translateY(146px);
-  -ms-transform: translateX(186px) translateY(146px);
-  -o-transform: translateX(186px) translateY(146px);
+  transform: translateX(186px) translateY(80px);
+  -webkit-transform: translateX(186px) translateY(80px);
+  -moz-transform: translateX(186px) translateY(80px);
+  -ms-transform: translateX(186px) translateY(80px);
+  -o-transform: translateX(186px) translateY(80px);
 }
 
 .label-foFive {
   width: 15px;
   height: 14px;
   fill: white;
-  transform: translateX(188px) translateY(246px);
-  -webkit-transform: translateX(188px) translateY(246px);
-  -moz-transform: translateX(188px) translateY(246px);
-  -ms-transform: translateX(188px) translateY(246px);
-  -o-transform: translateX(188px) translateY(246px);
+  transform: translateX(188px) translateY(189px);
+  -webkit-transform: translateX(188px) translateY(189px);
+  -moz-transform: translateX(188px) translateY(189px);
+  -ms-transform: translateX(188px) translateY(189px);
+  -o-transform: translateX(188px) translateY(189px);
 }
 
 .plate-threeFive {
@@ -216,20 +221,20 @@ i {
   fill: black;
   stroke-width: 1px;
   stroke: #9e9ea2;
-  transform: translateX(163.8px) translateY(150.4px);
-  -webkit-transform: translateX(163.8px) translateY(150.4px);
-  -moz-transform: translateX(163.8px) translateY(150.4px);
-  -ms-transform: translateX(163.8px) translateY(150.4px);
-  -o-transform: translateX(163.8px) translateY(150.4px);
+  transform: translateX(163.8px) translateY(84.4px);
+  -webkit-transform: translateX(163.8px) translateY(84.4px);
+  -moz-transform: translateX(163.8px) translateY(84.4px);
+  -ms-transform: translateX(163.8px) translateY(84.4px);
+  -o-transform: translateX(163.8px) translateY(84.4px);
 }
 
 .label-threeFive {
   width: 10.8pt;
   height: 10pt;
   fill: white;
-  transform: translateX(166.13px) translateY(245.06px);
-  -webkit-transform: translateX(166.13px) translateY(245.06px);
-  -moz-transform: translateX(166.13px) translateY(245.06px);
-  -ms-transform: translateX(166.13px) translateY(245.06px);
-  -o-transform: translateX(166.13px) translateY(245.06px);
+  transform: translateX(166.13px) translateY(189.06px);
+  -webkit-transform: translateX(166.13px) translateY(189.06px);
+  -moz-transform: translateX(166.13px) translateY(189.06px);
+  -ms-transform: translateX(166.13px) translateY(189.06px);
+  -o-transform: translateX(166.13px) translateY(189.06px);
 }
